--- a/html-template-news/css/custom.css
+++ b/html-template-news/css/custom.css
@@ -72,6 +72,40 @@
     color: #fe696a;
 }
 
+.icon-media {
+    position: absolute;
+    left: 10px;
+    bottom: 5px;
+    width: 30px;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.65);
+    border-radius: 50%;
+    color: #fff;
+    font-size: 13px;
+    text-align: center;
+    line-height: 30px;
+}
+
+.blog-entry-thumb:hover .icon-media {
+    background-color: #000;
+}
+
+
+/* Progress Bar TLTeam */
+
+.progress-container {
+    width: 100%;
+    position: fixed;
+    z-index: 99999999;
+    top: 0;
+    left: 0;
+}
+
+.progress-bar {
+    height: 5px;
+    background: #F86152;
+}
+
 @media (max-width: 991.98px) {
     .cz-sidebar {
         left: -30rem;
