--- a/src/app/modules/tag/index/index.component.html
+++ b/src/app/modules/tag/index/index.component.html
@@ -1,90 +1,68 @@
 <div class="card card-custom gutter-b">
-  <div class="card-header">
-    <div class="card-title">
-      <h3 class="card-label">Tag list</h3>
-    </div>
-    <div class="card-toolbar">
-      <a
-        type="button"
-        class="btn btn-primary"
-        routerLink="/tag/create/"
-        >Create New Tag</a
-      >
-    </div>
+    <!-- <div class="card-header">
+  <div class="card-title">
+    <h3 class="card-label">Tag list</h3>
   </div>
-  <div class="card-body">
-    <!-- begin:Table -->
-    <div class="table-responsive angular-bootstrap-table">
-      <table
-        class="table table-head-custom table-vertical-center overflow-hidden"
-      >
-        <thead>
-          <!-- <th class="selection-cell-header" data-row-selection="true">
-            <label class="checkbox checkbox-single"
-              ><input
-                type="checkbox"
-                (click)="grouping.selectAllRows()"
-                [checked]="grouping.checkAreAllRowsSelected()" /><span></span
-            ></label>
-          </th> -->
-          <th>
-            ID
-            <app-sort-icon
-              column="id"
-            ></app-sort-icon>
-          </th>
-          <th>
-            Name
-            <app-sort-icon
-              column="title"
-            ></app-sort-icon>
-          </th>
-          <th>ACTIONS</th>
-        </thead>
-        <tbody>
-          <tr *ngFor="let tag of tags">
-            <td>{{ tag.id }}</td>
-      
-            <td>{{ tag.name }}</td>
-      
-            <td>
-              <a
-                title="Edit tag"
-                class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3"
-                [routerLink]="['/tag/', tag.id, 'edit']"
-              >
-                <span
-                  [inlineSVG]="
-                    './assets/media/svg/icons/Communication/Write.svg'
-                  "
-                  cacheSVG="true"
-                  class="svg-icon svg-icon-md svg-icon-primary"
-                >
-                </span>
-              </a>
-              <a
-                title="Delete"
-                class="btn btn-icon btn-light btn-hover-danger btn-sm"
-                (click)="deleteTag(tag.id)"
-              >
-                <span
-                  [inlineSVG]="'./assets/media/svg/icons/General/Trash.svg'"
-                  cacheSVG="true"
-                  class="svg-icon svg-icon-md svg-icon-danger"
-                >
-                </span>
-              </a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <!-- end: Table -->
-    <!-- <app-paginator
-      class="d-flex justify-content-between align-items-center flex-wrap"
-      [paginator]="paginator"
-      [isLoading]="isLoading"
-      (paginate)="paginate($event)"
-    ></app-paginator> -->
+  <div class="card-toolbar">
+    <a
+      type="button"
+      class="btn btn-primary"
+      routerLink="/tag/create/"
+      >Create New Tag</a
+    >
   </div>
+</div> -->
+    <div class="card-body">
+        <!-- begin:Table -->
+        <div class="table-responsive angular-bootstrap-table">
+            <table class="table table-head-custom table-vertical-center overflow-hidden">
+                <thead>
+                    <!-- <th class="selection-cell-header" data-row-selection="true">
+          <label class="checkbox checkbox-single"
+            ><input
+              type="checkbox"
+              (click)="grouping.selectAllRows()"
+              [checked]="grouping.checkAreAllRowsSelected()" /><span></span
+          ></label>
+        </th> -->
+                    <th>
+                        ID
+                        <app-sort-icon column="id"></app-sort-icon>
+                    </th>
+                    <th>
+                        Name
+                        <app-sort-icon column="title"></app-sort-icon>
+                    </th>
+                    <th>ACTIONS</th>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let tag of tags">
+                        <td>{{ tag.id }}</td>
+
+                        <td>{{ tag.name }}</td>
+
+                        <td>
+                            <a title="Edit tag" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3" [routerLink]="['/tag/', tag.id, 'edit']">
+                                <span [inlineSVG]="
+                  './assets/media/svg/icons/Communication/Write.svg'
+                " cacheSVG="true" class="svg-icon svg-icon-md svg-icon-primary">
+              </span>
+                            </a>
+                            <a title="Delete" class="btn btn-icon btn-light btn-hover-danger btn-sm" (click)="deleteTag(tag.id)">
+                                <span [inlineSVG]="'./assets/media/svg/icons/General/Trash.svg'" cacheSVG="true" class="svg-icon svg-icon-md svg-icon-danger">
+              </span>
+                            </a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <!-- end: Table -->
+        <!-- <app-paginator
+    class="d-flex justify-content-between align-items-center flex-wrap"
+    [paginator]="paginator"
+    [isLoading]="isLoading"
+    (paginate)="paginate($event)"
+  ></app-paginator> -->
+    </div>
 </div>
