Style data table page post

--- a/src/app/modules/post/edit/edit.component.html
+++ b/src/app/modules/post/edit/edit.component.html
@@ -87,7 +87,7 @@
                             <p>Xem bài viết: url-bai-viet</p>
                         </mat-expansion-panel>
 
-                        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+                        <mat-expansion-panel>
                             <mat-expansion-panel-header>
                                 <mat-panel-title>
                                     Chuyên mục
@@ -120,6 +120,7 @@
                               </mat-panel-description> -->
                             </mat-expansion-panel-header>
                             <p>Add/Show/Edit/Delete/ tag</p>
+
                         </mat-expansion-panel>
                         <mat-expansion-panel>
                             <mat-expansion-panel-header>
