--- a/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
+++ b/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
@@ -1,33 +1,33 @@
 <!-- begin::Header Nav -->
 <ul class="menu-nav" [ngClass]="ulCSSClasses">
-  <!-- begin::1 Level -->
-  <li class="menu-item menu-item-rel" routerLinkActive="menu-item-active">
-    <a class="menu-link" routerLink="/post" routerLinkActive="active">
-      <span class="menu-text">Post</span>
-      <ng-container *ngIf="rootArrowEnabled">
-        <i class="menu-arrow"></i>
-      </ng-container>
-    </a>
-  </li>
-  <li class="menu-item menu-item-rel" routerLinkActive="menu-item-active">
-    <a class="menu-link" routerLink="/category" routerLinkActive="active">
-      <span class="menu-text">Category</span>
-      <ng-container *ngIf="rootArrowEnabled">
-        <i class="menu-arrow"></i>
-      </ng-container>
-    </a>
-  </li>
-  <li class="menu-item menu-item-rel" routerLinkActive="menu-item-active">
-    <a class="menu-link" routerLink="/tag" routerLinkActive="active">
-      <span class="menu-text">Tag</span>
-      <ng-container *ngIf="rootArrowEnabled">
-        <i class="menu-arrow"></i>
-      </ng-container>
-    </a>
-  </li>
-  <!-- end::1 Level -->
+    <!-- begin::1 Level -->
+    <li class="menu-item menu-item-rel" routerLinkActive="menu-item-active">
+        <a class="menu-link" routerLink="/post" routerLinkActive="active">
+            <span class="menu-text">Bài viết</span>
+            <ng-container *ngIf="rootArrowEnabled">
+                <i class="menu-arrow"></i>
+            </ng-container>
+        </a>
+    </li>
+    <li class="menu-item menu-item-rel" routerLinkActive="menu-item-active">
+        <a class="menu-link" routerLink="/category" routerLinkActive="active">
+            <span class="menu-text">Chuyên mục</span>
+            <ng-container *ngIf="rootArrowEnabled">
+                <i class="menu-arrow"></i>
+            </ng-container>
+        </a>
+    </li>
+    <li class="menu-item menu-item-rel" routerLinkActive="menu-item-active">
+        <a class="menu-link" routerLink="/tag" routerLinkActive="active">
+            <span class="menu-text">Thẻ</span>
+            <ng-container *ngIf="rootArrowEnabled">
+                <i class="menu-arrow"></i>
+            </ng-container>
+        </a>
+    </li>
+    <!-- end::1 Level -->
 
-  <!-- begin::1 Level -->
-  <!-- end::1 Level -->
+    <!-- begin::1 Level -->
+    <!-- end::1 Level -->
 </ul>
 <!-- end::Header Nav -->
